--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ jar/*.jar
 .buildpath
 .classpath
 
+target
 
 # Compiled source #
 ###################
@@ -50,3 +51,4 @@ jar/*.jar
 Icon?
 ehthumbs.db
 Thumbs.db
+.Rproj.user
