Updated to newer Berkeley DB libraries

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.drugepi.toolbox</groupId>
 	<artifactId>pharmacoepi</artifactId>
-	<version>2.4.15</version>
+	<version>2.4.16</version>
 	<packaging>jar</packaging>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -76,7 +76,7 @@
 								</copy>
 
 								<exec dir="${project.build.directory}" executable="/usr/bin/zip">
-									<arg line="-r toolbox.zip toolbox" />
+									<arg line="-r toolbox-${project.version}.zip toolbox" />
 								</exec>
 
 								<!-- <exec dir="." executable="/bin/sh"> <arg line="-c /Users/jeremy/Dropbox/JAR73/Projects/distribute_toolbox.sh" 
@@ -108,14 +108,30 @@
 		<repository>
 			<id>in-project</id>
 			<name>In Project Repo</name>
+			<releases>
+				<enabled>true</enabled>
+				<checksumPolicy>ignore</checksumPolicy>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 			<url>file://${project.basedir}/lib</url>
 		</repository>
-
-		<!-- mvn install:install-file -Dfile="/Users/jeremy/Dropbox/Eclipse Workspace/DoPE Pharmacoepi Toolbox/lib/libssrckdtree-j-1.0.2.jar" -DgroupId="libssrckdtree"  -DartifactId="libssrckdtree-j" -Dversion="1.02" -Dpackaging="jar" -->
+		
+    <repository>
+      <id>oracleReleases</id>
+      <name>Oracle Released Java Packages</name>
+      <url>http://download.oracle.com/maven</url>
+      <layout>default</layout>
+    </repository>
+  
+		<!-- mvn install:install-file -Dfile="/Users/jeremy/Dropbox/Eclipse Workspace/DoPE 
+			Pharmacoepi Toolbox/lib/libssrckdtree-j-1.02.jar" -DgroupId="libssrckdtree" 
+			-DartifactId="libssrckdtree-j" -Dversion="1.02" -Dpackaging="jar" -->
 	</repositories>
 
 	<dependencies>
-		<dependency> 
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math</artifactId>
 			<version>2.2</version>
@@ -125,35 +141,35 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
-  	<dependency>
-  		<groupId>gov.nist.math</groupId>
-  		<artifactId>jama</artifactId>
-  		<version>1.0.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.poi</groupId> 
-  		<artifactId>poi</artifactId>
-  		<version>3.9</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.poi</groupId>
-  		<artifactId>poi-ooxml</artifactId>
-  		<version>3.9</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.sleepycat</groupId>
-  		<artifactId>je</artifactId>
-  		<version>4.0.92</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.11</version>
-  	</dependency>
-  	<dependency> 
-  		<groupId>libssrckdtree</groupId>
-  		<artifactId>libssrckdtree-j</artifactId>
-  		<version>1.02</version>
-  	</dependency>
+		<dependency>
+			<groupId>gov.nist.math</groupId>
+			<artifactId>jama</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sleepycat</groupId>
+			<artifactId>je</artifactId>
+			<version>4.1.27</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		<dependency>
+			<groupId>libssrckdtree</groupId>
+			<artifactId>libssrckdtree-j</artifactId>
+			<version>1.02</version>
+		</dependency>
 	</dependencies>
 </project>
