--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,17 @@
 		<resources>
 		</resources>
 	</build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.1</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
 	<name>Pharmacoepi Toolbox</name>
 	<url>http://www.drugepi.org</url>
 	<organization>
