--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
+                    <reportOutputDirectory>documentation</reportOutputDirectory>
+                    <destDir>javadoc</destDir>
 				</configuration>
 			</plugin>
 
